--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,29 +6,29 @@ jobs:
   build:
     strategy:
       fail-fast: false
-      matrix: 
+      matrix:
         node:
           - 18
           - 20
         platform:
           - ubuntu-latest
-    name: '${{matrix.platform}} / Node.js ${{ matrix.node }}'
+    name: "${{matrix.platform}} / Node.js ${{ matrix.node }}"
     runs-on: ${{matrix.platform}}
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - uses: pnpm/action-setup@v3.0.0
-      with:
-        version: 8
+      - uses: pnpm/action-setup@v3.0.0
+        with:
+          version: 9.0.6
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
-    
-    - run: pnpm install
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
 
-    - name: run ci
-      run: pnpm run ci
+      - run: pnpm install
+
+      - name: run ci
+        run: pnpm run ci
