--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -3,43 +3,43 @@ name: prerelease
 on:
   push:
     branches:
-      - 'main'
+      - "main"
 
 jobs:
   build:
     strategy:
       fail-fast: true
-      matrix: 
+      matrix:
         node:
           - 18
         platform:
           - ubuntu-latest
-    name: '${{matrix.platform}} / Node.js ${{ matrix.node }}'
+    name: "${{matrix.platform}} / Node.js ${{ matrix.node }}"
     runs-on: ${{matrix.platform}}
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: "0"
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: "0"
 
-    - uses: pnpm/action-setup@v3.0.0
-      with:
-        version: 8
+      - uses: pnpm/action-setup@v3.0.0
+        with:
+          version: 9.0.6
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        registry-url: 'https://registry.npmjs.org'
-        cache: 'pnpm'
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: "https://registry.npmjs.org"
+          cache: "pnpm"
 
-    - run: npm whoami
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    
-    - run: pnpm install
+      - run: npm whoami
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-    - name: run publish
-      run: pnpm run publish:prerelease
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: pnpm install
+
+      - name: run publish
+        run: pnpm run publish:prerelease
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
