--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "check-mrl": "mrl check --verbose",
     "changelog": "rm -rf '/tmp/github-changelog-http-cache' && github_changelog_generator",
     "ci": "pnpm clean && turbo check",
+    "ci:publish": "pnpm publish -r",
     "clean": "turbo clean && rm -rf node_modules && pnpm install",
     "build": "turbo build",
     "compile:fast": "cd packages/all; tsc --build",
@@ -31,8 +32,6 @@
     "lint:monorepolint": "monorepolint check --verbose",
     "lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l",
     "prePublish": "turbo clean && pnpm install && turbo check",
-    "publish:release": "pnpm run prePublish && lerna publish --no-verify-access --force-publish",
-    "publish:prerelease": "pnpm run prePublish && lerna publish --no-verify-access --force-publish --canary minor --yes",
     "test": "turbo test",
     "prepare": "husky install"
   },
@@ -44,7 +43,7 @@
     "gh-pages": "^6.1.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
-    "lerna": "^8.1.2",
+    "@changesets/cli": "^2.27.5",
     "lint-staged": "^15.2.2",
     "mock-fs": "^5.2.0",
     "npm-run-all": "^4.1.5",
