--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - run: pnpm install
 
       - name: Create Release Pull Request
-        uses: monorepolint/changesets-action@v1
+        uses: changesets/action@v1
         with:
           title: "🦋 Changeset release"
           publish: pnpm ci:publish
