--- a/package.json
+++ b/package.json
@@ -33,38 +33,38 @@
     "lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l",
     "prepack": "turbo clean && pnpm install && turbo check",
     "test": "turbo test",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.5",
+    "@eslint/js": "^9.1.1",
     "@monorepolint/cli": "workspace:^",
     "@monorepolint/internal-mrl-config": "workspace:*",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^18.18.14",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^9.18.0",
     "gh-pages": "^6.1.1",
-    "husky": "^9.0.11",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "@changesets/cli": "^2.27.5",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.3.0",
     "mock-fs": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "semver": "^7.6.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.5",
     "turbo": "^1.13.3",
-    "typescript": "^5.4.5",
-    "@eslint/js": "^9.1.1",
-    "typescript-eslint": "^7.7.1",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "eslint": "^9.1.1",
-    "globals": "^15.0.0"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^7.7.1"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
   },
   "engines": {
     "node": ">=16",
-    "pnpm": ">=9.0.6"
+    "pnpm": ">=9.15.4"
   },
-  "packageManager": "pnpm@9.0.6"
+  "packageManager": "pnpm@9.15.4"
 }
