--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "es2022",
     "module": "Node16",
-    "lib": ["ES2023"],
+    "lib": [
+      "ES2023"
+    ],
     "moduleResolution": "Node16",
     "declaration": true,
     "declarationMap": true,
@@ -14,13 +16,15 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": false,
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true, // some dep is killing us here. This used to be false :(
     "emitDeclarationOnly": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true, // we leverage this for transpiling during jest :(
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   },
   "references": []
 }
