--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "prettier": "^3.4.2",
     "semver": "^7.6.3",
     "ts-jest": "^29.2.5",
-    "turbo": "^1.13.3",
+    "turbo": "^2.3.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "eslint-config-turbo": "^2.3.3"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
