--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "turbo": "^2.3.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
-    "eslint-config-turbo": "^2.3.3"
+    "eslint-config-turbo": "^2.3.3",
+    "vitest": "^2.1.8",
+    "@manypkg/get-packages": "^2.2.2",
+    "@vitest/coverage-v8": "^2.1.8"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
