--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -25,36 +25,32 @@
     "clean": "rm -rf build dist lib node_modules *.tgz tsconfig.tsbuildinfo",
     "compile-typescript": "tsc --build",
     "lint": "eslint .",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --colors --passWithNoTests",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --colors --passWithNoTests --watch",
+    "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest --passWithNoTests",
     "transpile-typescript": "tsup --config ../../tsup.config.cjs"
   },
   "dependencies": {
     "@monorepolint/config": "workspace:^",
     "@monorepolint/core": "workspace:^",
     "@monorepolint/utils": "workspace:^",
-    "globby": "^14.0.1",
+    "globby": "^14.0.2",
     "jest-diff": "^29.7.0",
     "resolve-package-path": "^4.0.3",
     "runtypes": "^6.7.0",
-    "semver": "^7.6.0",
-    "tslib": "^2.6.2"
+    "semver": "^7.6.3",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
     "@types/semver": "^7.5.8",
     "@types/tmp": "^0.2.6",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "eslint": "^9.1.1",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^9.18.0",
+    "prettier": "^3.4.2",
     "tmp": "^0.2.3",
-    "ts-jest": "^29.1.2",
-    "tslib": "^2.6.2",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
+    "tslib": "^2.8.1",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.3"
   },
   "publishConfig": {
     "access": "public"
