--- a/turbo.json
+++ b/turbo.json
@@ -49,8 +49,7 @@
       ],
       "outputs": [],
       "inputs": [
-        "src/**/*.tsx",
-        "src/**/*.ts",
+        "src/**/*",
         "tsconfig.json",
         "../../jest.config.base.js"
       ]
@@ -74,7 +73,8 @@
     },
     "//#check-mrl": {
       "dependsOn": [
-        "@monorepolint/internal-mrl-config#transpile-typescript"
+        "@monorepolint/internal-mrl-config#transpile-typescript",
+        "@monorepolint/cli#transpile-typescript"
       ],
       "inputs": [
         "package.json",
