--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "fsevents": "^2.3.3"
   },
   "engines": {
-    "node": ">=20",
-    "pnpm": ">=9.15.4"
+    "node": ">=20"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@10.15.0"
 }
