--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -36,9 +36,9 @@
     "globby": "^14.1.0",
     "jest-diff": "^30.1.1",
     "resolve-package-path": "^4.0.3",
-    "runtypes": "^6.7.0",
     "semver": "^7.7.2",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "zod": "^4.1.4"
   },
   "devDependencies": {
     "@types/semver": "^7.7.0",
