--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,15 +3,77 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "monday"
+      time: "09:00"
+      timezone: "America/New_York"
+    open-pull-requests-limit: 8
+    allow:
+      - dependency-type: "security"
+    labels:
+      - "dependencies"
+      - "npm"
+    commit-message:
+      prefix: "deps"
+      prefix-development: "deps-dev"
+    # Restrict @types/node to minor/patch updates only (prevents Node.js 23/24 type updates)
+    allowed-updates:
+      - dependency-name: "@types/node"
+        update-types:
+          - "version-update:semver-minor"
+          - "version-update:semver-patch"
     groups:
+      # TypeScript and ESLint related packages
       typescript-eslint:
         applies-to: version-updates
         patterns:
           - "typescript-eslint"
           - "@typescript-eslint/*"
-  # Enable version updates for Docker
+          - "eslint*"
+          - "@eslint/*"
+      # Testing framework and coverage tools
+      testing-tools:
+        applies-to: version-updates
+        patterns:
+          - "vitest*"
+          - "@vitest/*"
+          - "jest*"
+          - "@jest/*"
+          - "*coverage*"
+      # Build and bundling tools
+      build-tools:
+        applies-to: version-updates
+        patterns:
+          - "turbo*"
+          - "tsup*"
+          - "typescript"
+          - "dprint*"
+      # Type definitions (except @types/node which has special handling)
+      type-definitions:
+        applies-to: version-updates
+        patterns:
+          - "@types/*"
+        exclude-patterns:
+          - "@types/node"
+      # Workspace and monorepo management
+      monorepo-tools:
+        applies-to: version-updates
+        patterns:
+          - "@changesets/*"
+          - "@manypkg/*"
+          - "husky*"
+          - "lint-staged*"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
+      day: "monday"
+      time: "09:00"
+      timezone: "America/New_York"
+    open-pull-requests-limit: 3
+    labels:
+      - "github-actions"
+      - "ci"
+    commit-message:
+      prefix: "ci"
