feat: Add knip dependency analysis tool and plugin plan
- Install knip@^5.63.0 as dev dependency
- Add knip scripts for linting unused dependencies
- Create knip.config.ts with dynamic tslib detection
- Add comprehensive KNIP_PLUGIN.md implementation plan

The configuration includes:
- Smart tslib handling based on TypeScript importHelpers
- ESLint flat config detection
- Vitest workspace configuration
- Monorepo-aware workspace patterns

Next steps documented in KNIP_PLUGIN.md for creating @monorepolint/knip-plugin package.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "compile:watch": "cd packages/all; tsc --build --watch",
     "fix:lint:format": "dprint fmt 'packages/*/src/**/*.{ts,tsx,less}'",
     "fix:lint:monorepolint": "pnpm exec monorepolint fix",
+    "knip": "knip",
+    "knip:production": "knip --production",
     "lint": "pnpm run --workspace-concurrency 1 '/^lint:.*/'",
     "lint:format": "dprint check 'packages/*/src/**/*.{ts,tsx,less}'",
+    "lint:knip": "knip",
     "lint:monorepolint": "monorepolint check --verbose",
     "prepack": "turbo clean && pnpm install && turbo check",
     "prepare": "husky",
@@ -55,6 +58,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
+    "knip": "^5.63.0",
     "lint-staged": "^16.1.5",
     "mock-fs": "^5.5.0",
     "semver": "^7.7.2",
