fix: Audit and optimize GitHub Actions workflows
- Fix CI workflow node version variable bug (matrix.node-version → matrix.node)
- Upgrade all workflows to latest action versions (checkout@v5, pnpm@v5, setup-node@v5)
- Add workflow-level timeouts to prevent hanging jobs
- Optimize CodeQL workflow by removing gh-pages scanning and cleaning up comments
- Add concurrency control to documentation workflow to prevent duplicate deployments
- Fix stale bot configuration with proper messages, timing, and exempt labels
- Change CodeQL schedule from weekly Friday to Monday for better coverage

Resolves #395

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,16 +5,21 @@ on:
     branches: ["main"]
     paths: ["packages/docs/*", ".github/workflows/documentation.yml"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   gh-release:
     if: github.event_name != 'pull_request'
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
 
-      - uses: pnpm/action-setup@v4.1.0
+      - uses: pnpm/action-setup@v5
 
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v5
         with:
           node-version: "20"
           registry-url: "https://registry.npmjs.org"
