--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -6,13 +6,20 @@ on:
 
 jobs:
   stale:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/stale@v8
+      - uses: actions/stale@v9
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: "Stale issue message"
-          stale-pr-message: "Stale pull request message"
-          stale-issue-label: "no-issue-activity"
-          stale-pr-label: "no-pr-activity"
+          days-before-stale: 60
+          days-before-close: 7
+          stale-issue-message: "This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions."
+          stale-pr-message: "This pull request has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions."
+          close-issue-message: "This issue has been automatically closed due to inactivity. Please feel free to reopen if you believe this is still relevant."
+          close-pr-message: "This pull request has been automatically closed due to inactivity. Please feel free to reopen if you believe this is still relevant."
+          stale-issue-label: "stale"
+          stale-pr-label: "stale"
+          exempt-issue-labels: "pinned,security,bug"
+          exempt-pr-labels: "pinned,security"
