fix: Audit and optimize GitHub Actions workflows (#398)
* fix: Audit and optimize GitHub Actions workflows

- Fix CI workflow node version variable bug (matrix.node-version → matrix.node)
- Upgrade all workflows to latest action versions (checkout@v5, pnpm@v5, setup-node@v5)
- Add workflow-level timeouts to prevent hanging jobs
- Optimize CodeQL workflow by removing gh-pages scanning and cleaning up comments
- Add concurrency control to documentation workflow to prevent duplicate deployments
- Fix stale bot configuration with proper messages, timing, and exempt labels
- Change CodeQL schedule from weekly Friday to Monday for better coverage

Resolves #395

* fix: Correct Dependabot configuration schema violations

- Change dependency-type from invalid "security" to "all"
- Replace unsupported "allowed-updates" with "ignore" for @types/node restrictions

* fix: Update GitHub Actions to use existing v4 versions

- Change actions/setup-node@v5 to @v4 (v5 doesn't exist)
- Change pnpm/action-setup@v5 to @v4 (v5 doesn't exist)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on: [pull_request]
 
 jobs:
   build:
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
@@ -18,12 +19,12 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - uses: pnpm/action-setup@v4.1.0
+      - uses: pnpm/action-setup@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node }}
           cache: "pnpm"
 
       - run: pnpm install
