--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,14 +5,19 @@ on:
     branches: ["main"]
     paths: ["packages/docs/*", ".github/workflows/documentation.yml"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   gh-release:
     if: github.event_name != 'pull_request'
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
 
-      - uses: pnpm/action-setup@v4.1.0
+      - uses: pnpm/action-setup@v4
 
       - uses: actions/setup-node@v4
         with:
